# saki-dev

./: .scalafmt.conf  LICENSE  README.md  build.gradle  settings.gradle
error-reporter/: Cargo.toml  build.rs  cbindgen.toml
error-reporter/src/: lib.rs
examples/: mltt.saki  natproof.saki  peano.saki  rbtree.saki
gradle/wrapper/: gradle-wrapper.properties
saki-cli/: build.gradle
saki-cli/src/main/antlr/: Saki.g4
saki-cli/src/main/scala/: Main.scala
saki-concrete/: build.gradle
saki-concrete/src/main/antlr/: Saki.g4
saki-core/: .gitignore  build.sbt
saki-core/src/test/scala/: TermSubstituteTest.scala
saki-repl/: Cargo.toml  build.rs  saki.sublime-syntax.yml  theme.json
saki-repl/src/: highlighter.rs  lib.rs  repl.rs  reporter.rs  theme.rs
src/main/antlr/: Saki.g4
src/main/java/: .gitignore
src/main/java/saki/cli/: SakiCliMain.java  SakiToolTrait.java
src/main/scala/: main.scala
src/main/scala/core/: package.scala  semantics.scala  typing.scala
src/main/scala/saki/: CompileError.scala  Interpreter.scala  OperatorParser.scala  SourceSpan.scala  Syntax.scala  TypeChecker.scala  Visitor.scala  syntax.scala
src/main/scala/saki/cli/: CliUtil.scala
src/main/scala/saki/concrete/: OperatorParser.scala  SeqExprParser.scala  SpineParser.scala  Syntax.scala  Visitor.scala
src/main/scala/saki/core/: Context.scala  Core.scala  Definition.scala  Elaborate.scala  Expr.scala  (+12 more)
src/main/scala/surface/: Interpreter.scala  Syntax.scala  TypeChecker.scala  Visitor.scala
src/main/scala/util/: ScopedMap.scala  SourceSpan.scala  Util.scala  package.scala
(+108 files in other folders)
