[package]
name = "saki-repr"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]
name = "sakirepl"

[dependencies]
thiserror = "1.0"
miette = { version = "7.2", features = ["fancy"] }
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reedline = "0.36"
syntect = { version = "5.2", features = ["plist-load"] }
nu-ansi-term = "0.50"
plist = "1"

[build-dependencies]
cbindgen = "0.27"
